added more content

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<hyml>
+<html>
 
     <head>
         <title>Hayden's Awesome Webpage</title>
     </head>
 
     <body>
-        <p>Hello World!!</p>
+        <p><h1>University of North Alabama</h1></p>
+        <img src="logo.png" alt="UNA Logo" width="400">
+        <p><h3>My Awesome Web Page</h3></p>
+        <p>Things I Like:</p>
+        <p>
+            <ul>
+                <li>Making Web Pages</li>
+                <li>UNA Football</li>
+                <li>Playing Guitar</li>
+            </ul>
+        </p>
+        <p>
+            <a href="https://roarlions.com/">UNA Athletics</a>
+        </p>
     </body>
 
-</hyml>
+</html>
