--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <title>Hayden's Awesome Webpage</title>
     </head>
 
-    <body>
-        <p><h1>University of North Alabama</h1></p>
+    <body style="background-color:grey">
+        <p><h1 style="text-align: center;">University of North Alabama</h1></p>
+        <hr>
         <img src="logo.png" alt="UNA Logo" width="400">
         <p><h3>My Awesome Web Page</h3></p>
         <p>Things I Like:</p>
