--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Hayden's Awesome Webpage</title>
     </head>
 
-    <body style="background-color:grey">
+    <body style="background-color: gray; color:white">
         <p><h1 style="text-align: center;">University of North Alabama</h1></p>
         <hr>
         <img src="logo.png" alt="UNA Logo" width="400">
