--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
 
     <head>
-        <title>Hayden's Awesome Webpage</title>
+        <title>Hayden's Webpage</title>
     </head>
 
-    <body style="background-color: gray; color:white">
+    <body style="background-color: rgb(255, 255, 255); color:rgb(0, 0, 0)">
         <p><h1 style="text-align: center;">University of North Alabama</h1></p>
         <hr>
         <img src="logo.png" alt="UNA Logo" width="400">
-        <p><h3>My Awesome Web Page</h3></p>
-        <p>Things I Like:</p>
+        <p><h3>About Me</h3></p>
+        <p>Hobbies:</p>
         <p>
             <ul>
-                <li>Making Web Pages</li>
-                <li>UNA Football</li>
+                <li>Listening to Music</li>
+                <li>Being with Friends</li>
                 <li>Playing Guitar</li>
             </ul>
         </p>
