--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <p><h1 style="text-align: center;">University of North Alabama</h1></p>
         <hr>
         <img src="logo.png" alt="UNA Logo" width="400">
-        <p><h3>About Me</h3></p>
+        <p><h2>About Me</h2></p>
         <p>Hobbies:</p>
         <p>
             <ul>
                 <li>Listening to Music</li>
-                <li>Being with Friends</li>
+                <li>Hanging out with Friends</li>
                 <li>Playing Guitar</li>
             </ul>
         </p>
